# Vision_with_ImGUI

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Doxyfile  readme.md  vcpkg.json
Vision with ImGui/: CMakeLists.txt  DataStructures.hpp  ImGui.hpp  Version.h  Version.h.in  Vision with ImGui.cpp  header.h  helper.hpp  imgui.ini  main.cpp  test.hpp  vision.hpp
Vision with ImGui/Vision/: haarcascade_frontalface_alt.xml
Vision with ImGui/configuration/: Version.h  Version.h.in  imgui.ini  readme.md.in
template/: CMakeLists.txt  Enum.h  ImGui.hpp  ImGuiTemplate.cpp  Version.h  Version.h.in  header.h  imgui.ini  vision.hpp
template/Vision/: haarcascade_eye_tree_eyeglasses.xml
